discussion/kv_engine/153279/153279_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46046: [1/5] Make HdrHistogram iters follow typical C++ iter semantics

Begin updating HdrHistogram::Iterator to meet more requirements of
`LegacyInputIterator`.

With this, histograms can be iterated in the typical C++ style

 for (auto iter = foo(); iter != end(); iter++)

Or, for the default iteration mode:

 for (const auto& bucket: histogram)

This patch does not update all users of the iterators, rather
`Iterator::getNextValueAndCount()` and friends remain as shims for now,
implemented using `operator++`. These will be removed in a future
patch.

Change-Id: I5f07e3673ea0c93492c02b77622bbb2851ba839c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2021-05-12 08:44:34.000000000
Message: 
Uploaded patch set 5.
----------------------------------------------------------------------------------------------------------------------
Author: James H
Date: 2021-05-12 08:48:25.000000000
Message: 
Patch Set 5:

(1 comment)

Windowwwwwsss :fistshake:. Will poke
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-05-12 08:53:12.000000000
Message: 
Patch Set 5: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8951/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/utilities/hdrhistogram.cc:282:61: error: invalid operands to binary expression ("const HdrHistogram::Bucket" and "const HdrHistogram::Bucket") [clang-diagnostic-error]
    return *histoRLockPtr == *other.histoRLockPtr && bucket == other.bucket;
                                                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/utilities/hdrhistogram.h:65:14: note: candidate function not viable: "this" argument has type "const HdrHistogram::Bucket", but method is not marked const
        bool operator==(const Bucket& other) {
             ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8951/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/utilities/hdrhistogram.cc:282:61:
error: invalid operands to binary expression ("const HdrHistogram::Bucket" and "const HdrHistogram::Bucket") [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8951/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/35799/ : FAILURE

Compile error at ..\kv_engine\utilities\hdrhistogram.cc(282): error C2678: binary "==": no operator found which takes a left-hand operand of type "const HdrHistogram::Bucket" (or there is no acceptable conversion) ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/35799/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30608/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/utilities/hdrhistogram.cc:282:61:
error: invalid operands to binary expression ("const HdrHistogram::Bucket" and "const HdrHistogram::Bucket")
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30608/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/9572/ : FAILURE

Compile error at [2021-05-12T08:45:43.111Z] ../kv_engine/utilities/hdrhistogram.cc:282:61:
error: invalid operands to binary expression ("const HdrHistogram::Bucket" and "const HdrHistogram::Bucket")
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/9572/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/10504/ : FAILURE

Compile error at [2021-05-12T08:45:38.205Z] ../kv_engine/utilities/hdrhistogram.cc:282:70:
error: passing ?const HdrHistogram::Bucket? as ?this? argument discards qualifiers [-fpermissive]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/10504/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10645/ : FAILURE

Compile error at [2021-05-12T08:48:22.366Z] ../kv_engine/utilities/hdrhistogram.cc:282:70:
error: passing ?const HdrHistogram::Bucket? as ?this? argument discards qualifiers [-fpermissive]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10645/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/10899/ : FAILURE

Compile error at [2021-05-12T08:45:27.834Z] ../kv_engine/utilities/hdrhistogram.cc:282:61:
error: invalid operands to binary expression ("const HdrHistogram::Bucket" and "const HdrHistogram::Bucket")
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/10899/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18455/ : FAILURE

Compile error at [2021-05-12T08:45:50.004Z] ../kv_engine/utilities/hdrhistogram.cc:282:61:
error: invalid operands to binary expression ("const HdrHistogram::Bucket" and "const HdrHistogram::Bucket")
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18455/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/7503/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
